# vite-rs

./: .gitignore  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: test.yml
crates/vite-rs/: Cargo.toml
crates/vite-rs-axum-0-8/: Cargo.toml  README.md
crates/vite-rs-axum-0-8/examples/basic_usage/: Cargo.toml
crates/vite-rs-axum-0-8/examples/basic_usage/app/: package-lock.json  script.tsx
crates/vite-rs-axum-0-8/examples/basic_usage/app/public/: file.txt  test.css
crates/vite-rs-axum-0-8/examples/basic_usage/src/: main.rs
crates/vite-rs-axum-0-8/src/: lib.rs  vite_serve.rs  vite_tower_service.rs
crates/vite-rs-axum-0-8/test_projects/basic_usage_test/: README.md
crates/vite-rs-axum-0-8/test_projects/basic_usage_test/app/: App.tsx  package.json  tsconfig.json
crates/vite-rs-axum-0-8/test_projects/ctrl_c_handling_test/: Cargo.toml
crates/vite-rs-axum-0-8/test_projects/ctrl_c_handling_test/app/: index.html  vite.config.ts
crates/vite-rs-axum-0-8/test_projects/ctrl_c_handling_test/src/: main.rs
crates/vite-rs-axum-0-8/tests/: basic_usage_test.rs  ctrl_c_handling_test.rs
crates/vite-rs-axum-0-8/tests/util/: mod.rs  run_project.rs
crates/vite-rs-dev-server/: Cargo.toml
crates/vite-rs-dev-server/src/: lib.rs  util.rs
crates/vite-rs-embed-macro/: Cargo.toml
crates/vite-rs-embed-macro/src/: hash_utils.rs  html_parser.rs  lib.rs  syn_utils.rs
crates/vite-rs-embed-macro/src/vite/: mod.rs
crates/vite-rs-interface/: Cargo.toml
crates/vite-rs-interface/src/: lib.rs
crates/vite-rs/examples/: basic_usage.rs  custom_ctrl_c_handler.rs
crates/vite-rs/examples/vite-project-folder/: package-lock.json  package.json  vite.config.ts
crates/vite-rs/examples/vite-project-folder/app/: index.html  index.ts
crates/vite-rs/experiments/: README.md
crates/vite-rs/experiments/detecting_locally_running_vite_dev_server/: README.md
crates/vite-rs/experiments/renaming_bundles_feature/: README.md  renaming_bundles.rs
crates/vite-rs/experiments/renaming_bundles_feature/renaming_bundles/: script.js  vite.config.ts
crates/vite-rs/script/: list_vite_processes.sh
crates/vite-rs/src/: lib.rs
crates/vite-rs/test_projects/: package-lock.json  package.json
crates/vite-rs/test_projects/ctrl_c_handling_test/: Cargo.toml  vite.config.ts
crates/vite-rs/test_projects/ctrl_c_handling_test/src/: main.rs
crates/vite-rs/test_projects/custom_dev_server_port_test/: index.html  vite.config.ts
crates/vite-rs/test_projects/custom_output_dir_test/: Cargo.toml  vite.config.ts
crates/vite-rs/test_projects/custom_output_dir_test/src/: main.rs
crates/vite-rs/test_projects/normal_usage_test/: vite.config.ts
crates/vite-rs/test_projects/normal_usage_test/app/: pack1.ts
crates/vite-rs/test_projects/recompilation_test/: .gitignore  Cargo.toml
crates/vite-rs/test_projects/recompilation_test/app/: vite.config.ts
crates/vite-rs/test_projects/recompilation_test/src/: main.rs
crates/vite-rs/tests/: ctrl_c_handling_test.rs  dev_server_port_test.rs  normal_usage_test.rs  recompilation_test.rs
docs/: OLD_ASYNC_WARNING.md  OLD_OUTPUT_DIR_WARNING.md
