[package]
name = "vite-rs-axum-0-8"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
vite-rs-interface = { path = "../vite-rs-interface", features = ["content-hash"], version = "0.1.0" }
axum = { version = "0.8", default-features = false }
tower = "0.5"

[dev-dependencies]
nix = { version = "0.29.0", features = ["signal"] }        # for tests
reqwest = { version = "0.12.7", features = ["blocking"] }  # for tests
vite-rs = { path = "../vite-rs", version = "0.1.0", default-features = false, features = ["ctrlc", "content-hash"] } # for tests
# http = "1.3.1" # for tests
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }  # for tests

[features]
debug-prod = ["vite-rs-interface/debug-prod"]