[package]
name = "vite-rs-dev-server"
version = "0.1.0"
edition = "2021"
readme.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
] }
command-group = "5.0.1"
lazy_static = "1.4.0"
ctrlc = { optional = true, version = "3.4.4", features = ["termination"] }

[features]
ctrlc = ["dep:ctrlc"]
debug-prod = []
