[package]
name = "vite-rs-dev-server"
version = "0.1.0"
edition = "2021"
readme.workspace = true
description = "Uses ViteJS to compile frontend assets and embeds the results into your Rust binary. (Serves from the ViteJS dev server in development.)"
license = "MIT OR Apache-2.0"
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
keywords = ["vite", "vitejs", "bundler", "swc", "esbuild"]
categories = [
    "web-programming",
]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
] }
command-group = "5.0.1"
lazy_static = "1.4.0"
ctrlc = { optional = true, version = "3.4.4", features = ["termination"] }

[features]
ctrlc = ["dep:ctrlc"]
debug-prod = []
