[package]
name = "vite-rs-dev-server"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
] }
command-group = "5.0.1"
lazy_static = "1.4.0"
ctrlc = { optional = true, version = "3.4.4", features = ["termination"] }

[features]
ctrlc = ["dep:ctrlc"]
debug-prod = []
