[package]
name = "vite-rs-embed-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", default-features = false, features = [
    "derive",
    "parsing",
    "proc-macro",
    "printing",
] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.5.0"
mime_guess = "2.0.4"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
vite-rs-dev-server = { path = "../vite-rs-dev-server" }

[features]
default = []
debug-prod = []
ctrlc = []
