[package]
name = "vite-rs-embed-macro"
version = "0.1.0"
edition = "2021"
description = "Uses ViteJS to compile frontend assets and embeds the results into your Rust binary. (Serves from the ViteJS dev server in development.)"
license = "MIT OR Apache-2.0"
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
keywords = ["vite", "vitejs", "bundler", "swc", "esbuild"]
categories = [
    "web-programming",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", default-features = false, features = [
    "derive",
    "parsing",
    "proc-macro",
    "printing",
] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.5.0"
mime_guess = "2.0.4"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
vite-rs-dev-server = { path = "../vite-rs-dev-server", version = "0.1.0" }

[features]
default = []
debug-prod = []
ctrlc = []
