[package]
name = "vite-rs-embed-macro"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
vite-rs-dev-server = { path = "../vite-rs-dev-server", version = "0.1.0" }

syn = { version = "2", default-features = false, features = [
    "derive",
    "parsing",
    "proc-macro",
    "printing",
] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.5.0"
mime_guess = "2.0.4"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"]}
sha2 = { optional = true, version = "0.10", default-features = false }

[features]
default = []
debug-prod = []
ctrlc = []
content-hash = ["sha2"]
