[package]
name = "vite-rs-interface"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]

[features]
debug-prod = []
content-hash = []