[package]
name = "ctrl_c_handling_test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vite-rs = { path = "../../", default-features = false }
ctrlc = { optional = true, version = "3.4.4", features = ["termination"] }

[features]
default = []
custom-ctrl-c-handler = ["ctrlc"]
builtin-ctrl-c-handler = ["vite-rs/ctrlc"]

[workspace]
